--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="styles.css">
   <title>Система расчётов | HOFF</title>
 </head>
 
@@ -79,7 +79,7 @@
       <div id="ahtResult" class="result"></div>
     </div>
   </div>
-  <script src="index.js"></script>
+  <script src="scripts.js"></script>
 </body>
 
 </html>
